# rarlet

./: .gitignore  .gitmodules  README copy.md  README.md  pyproject.toml  ruff.toml  token.rtf
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  handling-stale-issues-prs.yml
maps/: Town06.net.xml  mclaughlin.net.xml
nautilus/: a6000-pod.yaml  pod.yaml  setup.sh
protagonist/: train.py
rarlet/: adversary_inference.py  inference.py  my_metadrive_env.py  protagonist_inference.py  run.sh  run_adversary.sh  sac_metadrive_adversary.py  sac_metadrive_protagonist.py  sac_protagonist.py  sac_scenic.py  sac_scenic_finetune.py  sac_scenic_protagonist.py  sac_torchcompile.py  scraps.py  train_protagonist.py
rarlet/configs/: adv-run1.yaml
rarlet/maps/: Town01.snet  Town06.snet  mclaughlin.xodr  osm.net.xml
rarlet/rl-adversary/: plotting.py
rarlet/scenarios/: adversary.scenic  drive.scenic  platv1a.scenic  protagonist.scenic  protagonsit.scenic  simple.scenic
rarlet/scenarios/controllers/: acc.py  lateral_control.py  pid.py
rarlet/tests/: conftest.py  plotting_test.py
scenarios/: adversary.scenic  protagonsit.scenic
tasks/: setup.py
